--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,9 +1,7 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:ours="clr-namespace:FSClient.Controls"
-
-        xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit" xmlns:local="clr-namespace:FSClient" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="FSClient.MainWindow"
+		xmlns:ours="clr-namespace:FSClient.Controls" xmlns:local="clr-namespace:FSClient" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit" mc:Ignorable="d" x:Class="FSClient.MainWindow"
         Title="FSClient" Height="319" Width="666"  WindowStyle="SingleBorderWindow" ResizeMode="CanMinimize" Closing="Window_Closing" Icon="phone.ico">
 	<Window.Resources>
 		<local:DurationTimeConverter x:Key="DurationTimeConverter"/>
@@ -174,15 +172,27 @@
 
 				</StackPanel>
 			</Border>
-			<Button Content="Options" HorizontalAlignment="Left" x:Name="btnOptions" Width="75" Click="btnOptions_Click" Style="{DynamicResource GlassButtonStyle}" Height="20" Canvas.Left="349" Canvas.Top="266" d:LayoutOverrides="VerticalAlignment" />
+			<Button Content="Options" HorizontalAlignment="Left" x:Name="btnOptions" Width="50" Click="btnOptions_Click" Style="{DynamicResource GlassButtonStyle}" Height="20" Canvas.Left="374" Canvas.Top="266" d:LayoutOverrides="VerticalAlignment" />
 		</Canvas>
 		<Button Canvas.Left="283" Canvas.Top="21" Content="Send To Voicemail" FontWeight="Bold" Foreground="#FFF5E200" Height="20" Name="btnSendVoicemail" Style="{DynamicResource GlassButtonStyle}" Width="120" Visibility="Hidden" Click="btnSendVoicemail_Click" />
+
+		<ours:OurAutoCompleteBox Canvas.Left="435" Text="Contact Search" Canvas.Top="265" Height="22" Width="164.553" Opacity="0.8" x:Name="txtSearchBox" FilterMode="Contains" GotKeyboardFocus="txtSearchBox_GotKeyboardFocus" LostKeyboardFocus="txtSearchBox_LostKeyboardFocus" DropDownClosing="txtSearchBox_DropDownClosing">
+			<ours:OurAutoCompleteBox.ItemTemplate>
+				<DataTemplate>
+
+					<TextBlock Text="{Binding}">
+						<TextBlock.ContextMenu>
+							<ContextMenu x:Name="contactSearchConextMenu" ItemsSource="{Binding Path=(local:ContactPluginManager.ContactMenuItems)}" IsEnabled="true" Closed="contactSearchConextMenu_Closed" Loaded="contactSearchConextMenu_Loaded" />
+						</TextBlock.ContextMenu>
+					</TextBlock>
+				</DataTemplate>
+				</ours:OurAutoCompleteBox.ItemTemplate>
+		</ours:OurAutoCompleteBox>
 		<Control
             x:Name="busyAnimation" 
             Style="{StaticResource BusyAnimationStyle}"
             Width="{Binding Path=ActualWidth, ElementName=mainControl}" 
-            Height="{Binding Path=ActualHeight, ElementName=mainControl}" 
+            Height="{Binding Path=ActualHeight, ElementName=mainControl}" d:IsHidden="True" 
             />
-
 	</Canvas>
 </Window>
