--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:ours="clr-namespace:FSClient.Controls" xmlns:local="clr-namespace:FSClient" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit" mc:Ignorable="d" x:Class="FSClient.MainWindow"
-        Title="FSClient" Height="319" Width="666"  WindowStyle="SingleBorderWindow" ResizeMode="CanMinimize" Closing="Window_Closing" Icon="phone.ico">
+        Title="FSClient" Height="345" Width="666"  WindowStyle="SingleBorderWindow" ResizeMode="CanMinimize" Closing="Window_Closing" Icon="phone.ico">
 	<Window.Resources>
 		<local:DurationTimeConverter x:Key="DurationTimeConverter"/>
 		<local:ShortDateTimeConverter x:Key="ShortDateTimeConverter"/>
@@ -54,7 +54,7 @@
 
 	</Window.Resources>
     <Canvas Background="#FF1A207E" x:Name="mainControl">
-		<Border x:Name="borderCalls" BorderThickness="2" BorderBrush="Black" Background="#FF000341" Height="271" Canvas.Left="4" Canvas.Top="12" Width="227" d:LayoutOverrides="VerticalAlignment">
+		<Border x:Name="borderCalls" BorderThickness="2" BorderBrush="Black" Background="#FF000341" Height="297" Canvas.Left="4" Canvas.Top="12" Width="227" d:LayoutOverrides="VerticalAlignment">
 			<Grid d:IsLocked="True">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="20" />
@@ -76,7 +76,7 @@
 				</DataGrid>
 			</Grid>
 		</Border>
-		<Border x:Name="borderAccounts" BorderThickness="2" BorderBrush="Black" Background="#FF000341" Width="192" Height="249" Canvas.Left="465" Canvas.Top="12" >
+		<Border x:Name="borderAccounts" BorderThickness="2" BorderBrush="Black" Background="#FF000341" Width="192" Height="297" Canvas.Left="465" Canvas.Top="12" >
 			<Grid d:IsLocked="True">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="20" />
@@ -148,8 +148,8 @@
 				<Button Margin="2,0"  Content="DND" FontWeight="Bold" Foreground="White" Height="20" Width="44" x:Name="btnDND" Style="{DynamicResource GlassButtonStyle}" VerticalAlignment="Top" Click="btnDND_Click"  d:LayoutOverrides="HorizontalAlignment, Width" />
 				<Button Margin="2,0" Content="Speaker" FontWeight="Bold" Foreground="White" Height="20" x:Name="btnSpeaker" Style="{DynamicResource GlassButtonStyle}" VerticalAlignment="Top" Width="55" d:LayoutOverrides="HorizontalAlignment" Click="btnSpeaker_Click" />			
 			</StackPanel>
-			<TextBox Height="35" x:Name="txtNumber" Text="" Background="#FF5C60AB" IsReadOnly="True" Foreground="White" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" Width="215" Canvas.Left="8" Canvas.Top="10" />
-			<Border BorderThickness="1" x:Name="CurrentCallInfo" Width="215" Canvas.Left="8" Canvas.Top="49">
+			<TextBox Height="35" x:Name="txtNumber" Text="" Background="#FF5C60AB" IsReadOnly="True" Foreground="White" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" Width="215" Canvas.Left="8" Canvas.Top="9" />
+			<Border BorderThickness="1" x:Name="CurrentCallInfo" Width="215" Canvas.Left="8" Canvas.Top="50">
 				<Border.Effect>
 					<DropShadowEffect/>
 				</Border.Effect>
@@ -172,22 +172,36 @@
 
 				</StackPanel>
 			</Border>
-			<Button Content="Options" HorizontalAlignment="Left" x:Name="btnOptions" Width="50" Click="btnOptions_Click" Style="{DynamicResource GlassButtonStyle}" Height="20" Canvas.Left="374" Canvas.Top="266" d:LayoutOverrides="VerticalAlignment" />
-		</Canvas>
-		<Button Canvas.Left="283" Canvas.Top="21" Content="Send To Voicemail" FontWeight="Bold" Foreground="#FFF5E200" Height="20" Name="btnSendVoicemail" Style="{DynamicResource GlassButtonStyle}" Width="120" Visibility="Hidden" Click="btnSendVoicemail_Click" />
+			<StackPanel  Orientation="Vertical" Name="CurrentStatusInfo" Width="215" Canvas.Left="10" Canvas.Top="49" Height="40">
+					<TextBlock Foreground="White" FontSize="13" Text="{Binding primary_account}" />
+					<StackPanel Orientation="Horizontal">
+						<TextBlock Foreground="White" FontSize="13" Text="{Binding active_accounts}"/>
+						<TextBlock Foreground="White" FontSize="13" Text=" of " />
+						<TextBlock Foreground="White" FontSize="13" Text="{Binding total_accounts}"/>
+					</StackPanel>
+			</StackPanel>
+			<Button Content="Options" HorizontalAlignment="Left" x:Name="btnOptions" Width="50" Click="btnOptions_Click" Style="{DynamicResource GlassButtonStyle}" Height="20" Canvas.Left="175" Canvas.Top="290" d:LayoutOverrides="VerticalAlignment" />
+		<Button Canvas.Left="52" Canvas.Top="21" Content="Send To Voicemail" FontWeight="Bold" Foreground="#FFF5E200" Height="20" Name="btnSendVoicemail" Style="{DynamicResource GlassButtonStyle}" Width="120" Visibility="Hidden" Click="btnSendVoicemail_Click" />
 
-		<ours:OurAutoCompleteBox Canvas.Left="435" Text="Contact Search" Canvas.Top="265" Height="22" Width="164.553" Opacity="0.8" x:Name="txtSearchBox" FilterMode="Contains" GotKeyboardFocus="txtSearchBox_GotKeyboardFocus" LostKeyboardFocus="txtSearchBox_LostKeyboardFocus" DropDownClosing="txtSearchBox_DropDownClosing" FontSize="11">
+		<ours:OurAutoCompleteBox Canvas.Left="10" Text="Contact Search" Canvas.Top="289" Height="22" Width="161" Opacity="0.8" x:Name="txtSearchBox" FilterMode="Contains" GotKeyboardFocus="txtSearchBox_GotKeyboardFocus" LostKeyboardFocus="txtSearchBox_LostKeyboardFocus" DropDownClosing="txtSearchBox_DropDownClosing" FontSize="11">
 			<ours:OurAutoCompleteBox.ItemTemplate>
 				<DataTemplate>
 
 					<TextBlock Text="{Binding}">
 						<TextBlock.ContextMenu>
-							<ContextMenu x:Name="contactSearchConextMenu" ItemsSource="{Binding Path=(local:ContactPluginManager.ContactMenuItems)}" IsEnabled="true" Closed="contactSearchConextMenu_Closed" Loaded="contactSearchConextMenu_Loaded" />
+							<ContextMenu x:Name="contactSearchConextMenu" IsEnabled="true" Closed="contactSearchConextMenu_Closed" Loaded="contactSearchConextMenu_Loaded"  ItemsSource="{Binding Path=(local:ContactPluginManager.ContactMenuItems)}" />
 						</TextBlock.ContextMenu>
 					</TextBlock>
 				</DataTemplate>
 				</ours:OurAutoCompleteBox.ItemTemplate>
 		</ours:OurAutoCompleteBox>
+		<Button x:Name="btnCallsTab" Width="15" Style="{DynamicResource GlassButtonStyle}" Canvas.Left="10" Canvas.Top="127" Height="130" Click="btnCallsTab_Click">
+			<TextBlock TextAlignment="Center" LineHeight="12" FontWeight="Bold" LineStackingStrategy="BlockLineHeight" Text="&#xd;&#xa;C&#xd;&#xa;a&#xd;&#xa;l&#xd;&#xa;l&#xd;&#xa;s&#xd;&#xa;" />
+		</Button>
+		<Button x:Name="btnAccountsTab" Width="15" Style="{DynamicResource GlassButtonStyle}" Canvas.Left="208" Canvas.Top="127" Height="130" Click="btnAccountsTab_Click">
+				<TextBlock TextAlignment="Center" LineHeight="12" FontWeight="Bold" LineStackingStrategy="BlockLineHeight" Text="&#xd;&#xa;A&#xd;&#xa;c&#xd;&#xa;c&#xd;&#xa;o&#xd;&#xa;u&#xd;&#xa;n&#xd;&#xa;t&#xd;&#xa;s&#xd;&#xa;" />
+			</Button>
+		</Canvas>
 		<Control
             x:Name="busyAnimation" 
             Style="{StaticResource BusyAnimationStyle}"
